# qdat_bench

./: .gitignore  README.md  annotation_streamlit.py  build_qdat_bench_audio_source.py  eval_results.py  extract_muaalem_transcripts.py  plot_stats.py  pyproject.toml  qdat_bench_annotations.json  validate_annotated_ds.py
assets/muaalem-transcripts/: muaalem-model-v3_0_predictions.jsonl  muaalem-model-v3_1_predictions.jsonl  muaalem-model-v3_2_predictions.jsonl
assets/results/: result_muaalem-model-v3_0_predictions.json  result_muaalem-model-v3_1_predictions.json  result_muaalem-model-v3_2_predictions.json  result_muaalem-model-v3_2_predictions_bootstrap_avg_samples.json
src/qdat_bench/: data_models.py  langauge.py
